# ggj-2024

./: .gitignore  README.md  pyproject.toml
ai_config/: system_prompt.txt  themes.txt
comedy_court/: main.py
comedy_court/html/: server.html
comedy_court/lib/: king.py
comedy_court/static/: script.js
ggj-2024/: main.py
ggj-2024/html/: client.html  server.html
ggj-2024/lib/: system_prompt.txt  test_game_loop.py
ggj-2024/static/: client.html
jest_fest/: main.py
jest_fest/html/: client.html  server.html
jest_fest/lib/: king.py  palette.py  test_game_loop.py
jest_fest/static/: script.js
jest_fest/static/images/: .gitignore
jest_fest/static/sound/: .gitignore
jest_fest/static/sound/effects/: .gitignore
